# wieclaw_rl

./: .gitignore  Cargo.toml  README.md  build.rs
raws/: spawns.json
resources/: menu.xp  wfc-populated.xp
src/: animal_ai_system.rs  bystander_ai_system.rs  camera.rs  components.rs  damage_system.rs  gamesystem.rs  gui.rs  hunger_system.rs  inventory_system.rs  lightning_system.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  movement_system.rs  particle_system.rs  player.rs  random_table.rs  ranged_combat_system.rs  rect.rs  rex_assets.rs  rng.rs  saveload_system.rs  spawner.rs  trigger_system.rs  visibility_system.rs
src/ai/: adjacent_ai_system.rs  approach_ai_system.rs  chase_ai_system.rs  default_move_system.rs  encumbrance_system.rs  flee_ai_system.rs  initiative_system.rs  mod.rs  quipping.rs  turn_status.rs  visible_ai_system.rs
src/effects/: damage.rs  hunger.rs  mod.rs  movement.rs  particles.rs  targeting.rs  triggers.rs
src/gamelog/: builder.rs  events.rs  logstore.rs  mod.rs
src/gui/: cheat_menu.rs  credits_menu.rs  drop_item_menu.rs  game_over_menu.rs  hud.rs  identify_menu.rs  inventory_menu.rs  item_render.rs  main_menu.rs  menus.rs  mod.rs  ranged_target.rs  remove_curse_menu.rs  remove_item_menu.rs  tooltips.rs  vendor_menu.rs
src/inventory_system/: collection_system.rs  drop_system.rs  mod.rs  remove_system.rs  use_equip.rs  use_system.rs
src/map/: camera.rs  dungeon.rs  mod.rs  themes.rs  tiletype.rs
src/map_builders/: area_ending_point.rs  area_starting_point.rs  area_starting_points.rs  (+32 more)
(+40 files in other folders)
