[package]
name = "wieclaw_rl"
version = "0.1.0"
authors = ["Gzijebeziu Żebyr-Żyjgolem"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.7", features = ["serde"] }
specs = { version = "0.18.0", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
lazy_static = "1.4.0"
regex = "1.8.1"

[build-dependencies]
winres = "0.1.12"